--- a/FormationSup.html
+++ b/FormationSup.html
@@ -45,7 +45,7 @@
 
   <!-- Menu -->
   <nav class="flex space-x-8 text-sm font-medium text-teal-900">
-    <a href="#" class="hover:text-teal-600">Actualités <span class="ml-1">›</span></a>
+    <a href="#" class="hover:text-teal-600">Programmes <span class="ml-1">›</span></a>
     <a href="#" class="hover:text-teal-600">Formation professionnelle <span class="ml-1">›</span></a>
     <a href="#" class="hover:text-teal-600">Formation supérieure <span class="ml-1">›</span></a>
     <a href="#" class="hover:text-teal-600">Carrières</a>
