menu de navigation

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
 
   <!-- Menu -->
   <nav class="flex space-x-8 text-sm font-medium text-teal-900">
-    <a href="#" class="hover:text-teal-600">Actualités <span class="ml-1">›</span></a>
-    <a href="#" class="hover:text-teal-600">Formation professionnelle <span class="ml-1">›</span></a>
-    <a href="#" class="hover:text-teal-600">Formation supérieure <span class="ml-1">›</span></a>
-    <a href="#" class="hover:text-teal-600">Carrières</a>
-    <a href="#" class="hover:text-teal-600">Entreprises <span class="ml-1">›</span></a>
-    <a href="#" class="hover:text-teal-600">Contactez-nous <span class="ml-1">›</span></a>
+    <a href="Actualites.html" class="hover:text-teal-600">Actualités <span class="ml-1">›</span></a>
+    <a href="FormationProf.html" class="hover:text-teal-600">Formation professionnelle <span class="ml-1">›</span></a>
+    <a href="FormationSup.html" class="hover:text-teal-600">Formation supérieure <span class="ml-1">›</span></a>
+    <a href="Carrieres.html" class="hover:text-teal-600">Carrières</a>
+    <a href="Entreprises.html" class="hover:text-teal-600">Entreprises <span class="ml-1">›</span></a>
+    <a href="ContactezNous.html" class="hover:text-teal-600">Contactez-nous <span class="ml-1">›</span></a>
   </nav>
 </header>
 
