DESIGNATION DE LA PREMIERE COULEUR ET LA DEUXIÈME.

--- a/Actualites.html
+++ b/Actualites.html
@@ -15,11 +15,11 @@
             theme: {
                 extend: {
                     colors: {
-                        primary: '#1E3A8A', // Bleu personnalisé
-                        secondary: '#2563EB',
+                        primary: '#1E3A8A', // Bleu personnalisé $primary-color: #1E3A8A;  
+                        secondary: '#2563EB', //$secondary-color: #2563EB; 
                     },
                     fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
+                        sans: ['Inter', 'sans-serif'], //$font-nav: 'Inter', 'sans-serif';
                     },
                 }
             }
