mise en places de la plateforme, 1ere version

--- a/FormationSup.html
+++ b/FormationSup.html
@@ -2,63 +2,97 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Easy Bridge International Academy</title>
-
-    <!-- Tailwind CSS via CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
-
-    <!-- Optionnel : Config Tailwind custom -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#1E3A8A', // Bleu personnalisé
-                        secondary: '#2563EB',
-                    },
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                    },
-                }
-            }
-        }
-    </script>
-
-    <!-- Favicon ou autres meta -->
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Formation supérieure | Easy Bridge International Academy</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      theme: { extend: { colors: { primary: '#B08E2A', secondary: '#203749', light: '#FFFFFF' } } }
+    }
+  </script>
 </head>
 
-<body class="font-sans text-gray-800">
+<body class="font-sans text-secondary bg-light">
 
-    <!-- Navbar -->
-    <header class="flex items-center justify-between px-8 py-4 shadow bg-white">
-  <!-- Logo -->
-  <div class="flex items-center space-x-3">
-    <img src="img/logo.jpg" alt="Logo EsyBridge" class="h-10">
-    <div class="leading-tight">
-      <h1 class="font-bold text-sm">Easy Bridge</h1>
-      <p class="text-xs text-gray-600">International Academy</p>
+  <!-- Header -->
+  <header class="bg-light shadow sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-6 md:px-10 py-4 flex justify-between items-center">
+      <div class="flex items-center space-x-3">
+        <a href="index.html"><img src="img/logo.jpg" alt="Logo EasyBridge" class="h-10"></a>
+        <div class="leading-tight">
+          <h1 class="font-bold text-sm text-secondary">Easy Bridge</h1>
+          <p class="text-xs text-gray-600">International Academy</p>
+        </div>
+      </div>
+      <button id="menu-btn" class="md:hidden flex flex-col space-y-1.5" aria-label="Menu">
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+      </button>
+      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm">
+        <a href="Actualites.html">Actualités</a>
+        <a href="FormationProf.html">Formation professionnelle</a>
+        <a href="FormationSup.html">Formation supérieure</a>
+        <a href="Carrieres.html">Carrières</a>
+        <a href="Entreprises.html">Entreprises</a>
+        <a href="ContactezNous.html">Contactez-nous</a>
+      </nav>
     </div>
-  </div>
+    <nav id="mobile-menu" class="hidden flex-col space-y-2 px-6 pb-4 md:hidden bg-light shadow">
+      <a href="Actualites.html">Actualités</a>
+      <a href="FormationProf.html">Formation professionnelle</a>
+      <a href="FormationSup.html">Formation supérieure</a>
+      <a href="Carrieres.html">Carrières</a>
+      <a href="Entreprises.html">Entreprises</a>
+      <a href="ContactezNous.html">Contactez-nous</a>
+    </nav>
+  </header>
 
-  <!-- Menu -->
-  <nav class="flex space-x-8 text-sm font-medium text-teal-900">
-    <a href="Actualites.html" class="hover:text-teal-600">Actualités <span class="ml-1">›</span></a>
-    <a href="FormationProf.html" class="hover:text-teal-600">Formation professionnelle <span class="ml-1">›</span></a>
-    <a href="FormationSup.html" class="hover:text-teal-600">Formation supérieure <span class="ml-1">›</span></a>
-    <a href="Carrieres.html" class="hover:text-teal-600">Carrières</a>
-    <a href="Entreprises.html" class="hover:text-teal-600">Entreprises <span class="ml-1">›</span></a>
-    <a href="ContactezNous.html" class="hover:text-teal-600">Contactez-nous <span class="ml-1">›</span></a>
-  </nav>
-</header>
+  <!-- Hero -->
+  <section class="bg-secondary text-light py-12 text-center">
+    <h2 class="text-3xl font-bold">Formation Supérieure</h2>
+    <p class="mt-2">Un enseignement de qualité pour préparer votre avenir</p>
+  </section>
 
+  <main class="max-w-6xl mx-auto px-6 py-12 grid md:grid-cols-2 gap-8">
+    <div class="bg-white p-6 shadow rounded-xl">
+      <img src="img/sup1.jpg" class="rounded-lg mb-4">
+      <h3 class="font-semibold text-lg">Licence</h3>
+      <p class="text-sm text-gray-600">Programmes de licence dans divers domaines : économie, informatique, droit,
+        sciences sociales…</p>
+    </div>
+    <div class="bg-white p-6 shadow rounded-xl">
+      <img src="img/sup2.jpg" class="rounded-lg mb-4">
+      <h3 class="font-semibold text-lg">Master</h3>
+      <p class="text-sm text-gray-600">Des masters spécialisés avec une approche pratique et académique.</p>
+    </div>
+    <div class="bg-white p-6 shadow rounded-xl">
+      <img src="img/sup3.jpg" class="rounded-lg mb-4">
+      <h3 class="font-semibold text-lg">MBA</h3>
+      <p class="text-sm text-gray-600">Un programme de MBA international pour développer vos compétences en gestion et
+        leadership.</p>
+    </div>
+    <div class="bg-white p-6 shadow rounded-xl">
+      <img src="img/sup4.jpg" class="rounded-lg mb-4">
+      <h3 class="font-semibold text-lg">Programmes internationaux</h3>
+      <p class="text-sm text-gray-600">Échanges universitaires et doubles diplômes avec nos partenaires mondiaux.</p>
+    </div>
+  </main>
 
-    <main></main>
-    <footer></footer>
-
-
+  <footer class="bg-secondary text-light py-4 text-center text-sm">© 2025 Easy Bridge International Academy.</footer>
+  <script>
+    const btn = document.getElementById("menu-btn"); const menu = document.getElementById("mobile-menu");
+    if (btn && menu) btn.addEventListener("click", () => menu.classList.toggle("hidden"));
+    (function activeLink() {
+      let current = location.pathname.split("/").pop() || "index.html";
+      current = current.toLowerCase();
+      document.querySelectorAll("header nav a[href]").forEach(a => {
+        let target = (a.getAttribute("href") || "").split("/").pop().toLowerCase();
+        if (target === current) a.classList.add("font-semibold", "text-primary");
+      });
+    })();
+  </script>
 </body>
 
 </html>
