--- a/ContactezNous.html
+++ b/ContactezNous.html
@@ -2,63 +2,144 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Easy Bridge International Academy</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contactez-nous | Easy Bridge International Academy</title>
 
-    <!-- Tailwind CSS via CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Optionnel : Config Tailwind custom -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#1E3A8A', // Bleu personnalisé
-                        secondary: '#2563EB',
-                    },
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                    },
-                }
-            }
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#B08E2A',
+            secondary: '#203749',
+            light: '#FFFFFF',
+            whatsapp: '#25D366',
+          }
         }
-    </script>
-
-    <!-- Favicon ou autres meta -->
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+      }
+    }
+  </script>
 </head>
 
-<body class="font-sans text-gray-800">
+<body class="font-sans text-secondary bg-light">
 
-    <!-- Navbar -->
-    <header class="flex items-center justify-between px-8 py-4 shadow bg-white">
-  <!-- Logo -->
-  <div class="flex items-center space-x-3">
-    <img src="img/logo.jpg" alt="Logo EsyBridge" class="h-10">
-    <div class="leading-tight">
-      <h1 class="font-bold text-sm">Easy Bridge</h1>
-      <p class="text-xs text-gray-600">International Academy</p>
+  <!-- Navbar -->
+  <header class="bg-light shadow sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-6 md:px-10 py-4 flex justify-between items-center">
+      <!-- Logo -->
+      <div class="flex items-center space-x-3">
+              <a href="index.html"> <img src="img/logo.jpg" alt="Logo EasyBridge" class="h-10"></a>
+        <div class="leading-tight">
+          <h1 class="font-bold text-sm text-secondary">Easy Bridge</h1>
+          <p class="text-xs text-gray-600">International Academy</p>
+        </div>
+      </div>
+
+      <!-- Hamburger -->
+      <button id="menu-btn" class="md:hidden flex flex-col space-y-1.5">
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+      </button>
+
+      <!-- Menu desktop -->
+      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm">
+        <a href="Actualites.html" class="hover:text-primary">Actualités</a>
+        <a href="FormationProf.html" class="hover:text-primary">Formation professionnelle</a>
+        <a href="FormationSup.html" class="hover:text-primary">Formation supérieure</a>
+        <a href="Carrieres.html" class="hover:text-primary">Carrières</a>
+        <a href="Entreprises.html" class="hover:text-primary">Entreprises</a>
+        <a href="ContactezNous.html" class="text-primary font-semibold">Contactez-nous</a>
+      </nav>
     </div>
-  </div>
 
-  <!-- Menu -->
-  <nav class="flex space-x-8 text-sm font-medium text-teal-900">
-    <a href="Actualites.html" class="hover:text-teal-600">Actualités <span class="ml-1">›</span></a>
-    <a href="FormationProf.html" class="hover:text-teal-600">Formation professionnelle <span class="ml-1">›</span></a>
-    <a href="FormationSup.html" class="hover:text-teal-600">Formation supérieure <span class="ml-1">›</span></a>
-    <a href="Carrieres.html" class="hover:text-teal-600">Carrières</a>
-    <a href="Entreprises.html" class="hover:text-teal-600">Entreprises <span class="ml-1">›</span></a>
-    <a href="ContactezNous.html" class="hover:text-teal-600">Contactez-nous <span class="ml-1">›</span></a>
-  </nav>
-</header>
+    <!-- Menu mobile -->
+    <nav id="mobile-menu" class="hidden flex-col space-y-2 px-6 pb-4 md:hidden bg-light shadow">
+      <a href="Actualites.html" class="block py-2 border-b border-gray-200 hover:text-primary">Actualités</a>
+      <a href="FormationProf.html" class="block py-2 border-b border-gray-200 hover:text-primary">Formation professionnelle</a>
+      <a href="FormationSup.html" class="block py-2 border-b border-gray-200 hover:text-primary">Formation supérieure</a>
+      <a href="Carrieres.html" class="block py-2 border-b border-gray-200 hover:text-primary">Carrières</a>
+      <a href="Entreprises.html" class="block py-2 border-b border-gray-200 hover:text-primary">Entreprises</a>
+      <a href="ContactezNous.html" class="block py-2 font-semibold text-primary">Contactez-nous</a>
+    </nav>
+  </header>
 
+  <!-- Bloc Adresse -->
+  <section class="bg-secondary text-light py-6 px-6 text-center">
+    <h3 class="text-lg font-semibold mb-2">📍 Adresse</h3>
+    <p class="text-sm sm:text-base leading-relaxed max-w-2xl mx-auto">
+      شارع الأميرة لالة عائشة إقامة ملاك الرحمة الطابق 3 <br>
+      (أمام ONE، بجانب مقهى La Lune) <br>
+      26000 Settat, Morocco
+    </p>
+  </section>
 
-    <main></main>
-    <footer></footer>
+  <!-- Section Carte + Formulaire -->
+  <main class="relative w-full h-[80vh]">
+    <!-- Google Map -->
+    <iframe class="absolute inset-0 w-full h-full" frameborder="0"
+      src="https://www.google.com/maps?q=شارع الأميرة لالة عائشة إقامة ملاك الرحمة الطابق 3, Settat, Morocco&output=embed"
+      allowfullscreen></iframe>
 
+    <!-- Overlay sombre -->
+    <div class="absolute inset-0 bg-black bg-opacity-30"></div>
+
+    <!-- Formulaire centré -->
+    <div class="relative z-10 flex justify-center items-center h-full px-4">
+      <div class="w-full sm:w-[28rem] bg-light shadow-lg rounded-2xl p-6 sm:p-8 backdrop-blur">
+        <h2 class="text-xl font-bold text-secondary mb-6 text-center">Envoyez-nous un message</h2>
+        <form action="#" method="POST" class="space-y-4">
+          <div>
+            <label for="name" class="block text-sm font-medium text-secondary">Nom complet</label>
+            <input type="text" id="name" name="name" required
+              class="mt-1 block w-full rounded-lg border border-gray-300 px-3 py-2 text-sm sm:text-base focus:outline-none focus:ring-2 focus:ring-primary">
+          </div>
+          <div>
+            <label for="email" class="block text-sm font-medium text-secondary">Adresse email</label>
+            <input type="email" id="email" name="email" required
+              class="mt-1 block w-full rounded-lg border border-gray-300 px-3 py-2 text-sm sm:text-base focus:outline-none focus:ring-2 focus:ring-primary">
+          </div>
+          <div>
+            <label for="message" class="block text-sm font-medium text-secondary">Message</label>
+            <textarea id="message" name="message" rows="4" required
+              class="mt-1 block w-full rounded-lg border border-gray-300 px-3 py-2 text-sm sm:text-base focus:outline-none focus:ring-2 focus:ring-primary"></textarea>
+          </div>
+          <button type="submit"
+            class="w-full bg-primary text-light font-semibold py-2 px-4 rounded-lg hover:bg-secondary transition text-sm sm:text-base">
+            Envoyer
+          </button>
+        </form>
+
+        <!-- WhatsApp -->
+        <div class="mt-6">
+          <a href="https://wa.me/212721936380" target="_blank"
+            class="flex items-center justify-center space-x-2 w-full bg-whatsapp text-light font-semibold py-3 px-4 rounded-lg hover:opacity-90 transition text-sm sm:text-base">
+            <span>💬</span>
+            <span>Contacter via WhatsApp</span>
+          </a>
+        </div>
+      </div>
+    </div>
+  </main>
+
+  <!-- Footer -->
+  <footer class="bg-secondary text-light py-4 text-center text-xs sm:text-sm">
+    © 2025 Easy Bridge International Academy. Tous droits réservés.
+  </footer>
+
+  <!-- Script menu -->
+  <script>
+    const btn = document.getElementById("menu-btn");
+    const menu = document.getElementById("mobile-menu");
+    btn.addEventListener("click", () => {
+      menu.classList.toggle("hidden");
+    });
+  </script>
 
 </body>
-
 </html>
