--- a/index.html
+++ b/index.html
@@ -2,63 +2,177 @@
 <html lang="fr">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Easy Bridge International Academy</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Accueil | Easy Bridge International Academy</title>
 
-    <!-- Tailwind CSS via CDN -->
-    <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Tailwind CSS -->
+  <script src="https://cdn.tailwindcss.com"></script>
 
-    <!-- Optionnel : Config Tailwind custom -->
-    <script>
-        tailwind.config = {
-            theme: {
-                extend: {
-                    colors: {
-                        primary: '#1E3A8A', // Bleu personnalisé
-                        secondary: '#2563EB',
-                    },
-                    fontFamily: {
-                        sans: ['Inter', 'sans-serif'],
-                    },
-                }
-            }
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            primary: '#B08E2A',
+            secondary: '#203749',
+            light: '#FFFFFF',
+            whatsapp: '#25D366',
+          }
         }
-    </script>
-
-    <!-- Favicon ou autres meta -->
-    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+      }
+    }
+  </script>
 </head>
 
-<body class="font-sans text-gray-800">
+<body class="font-sans text-secondary bg-light">
 
-    <!-- Navbar -->
-    <header class="flex items-center justify-between px-8 py-4 shadow bg-white">
-  <!-- Logo -->
-  <div class="flex items-center space-x-3">
-    <img src="img/logo.jpg" alt="Logo EsyBridge" class="h-10">
-    <div class="leading-tight">
-      <h1 class="font-bold text-sm">Easy Bridge</h1>
-      <p class="text-xs text-gray-600">International Academy</p>
+  <!-- Navbar -->
+  <header class="bg-light shadow sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-6 md:px-10 py-4 flex justify-between items-center">
+      <div class="flex items-center space-x-3">
+        <a href="index.html"><img src="img/logo.jpg" alt="Logo EasyBridge" class="h-10"></a>
+        <div class="leading-tight">
+          <h1 class="font-bold text-sm text-secondary">Easy Bridge</h1>
+          <p class="text-xs text-gray-600">International Academy</p>
+        </div>
+      </div>
+      <button id="menu-btn" class="md:hidden flex flex-col space-y-1.5" aria-label="Menu">
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+        <span class="block w-6 h-0.5 bg-secondary"></span>
+      </button>
+      <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm">
+        <a href="Actualites.html">Actualités</a>
+        <a href="FormationProf.html">Formation professionnelle</a>
+        <a href="FormationSup.html">Formation supérieure</a>
+        <a href="Carrieres.html">Carrières</a>
+        <a href="Entreprises.html">Entreprises</a>
+        <a href="ContactezNous.html">Contactez-nous</a>
+      </nav>
     </div>
-  </div>
+    <nav id="mobile-menu" class="hidden flex-col space-y-2 px-6 pb-4 md:hidden bg-light shadow">
+      <a href="Actualites.html">Actualités</a>
+      <a href="FormationProf.html">Formation professionnelle</a>
+      <a href="FormationSup.html">Formation supérieure</a>
+      <a href="Carrieres.html">Carrières</a>
+      <a href="Entreprises.html">Entreprises</a>
+      <a href="ContactezNous.html">Contactez-nous</a>
+    </nav>
+  </header>
 
-  <!-- Menu -->
-  <nav class="flex space-x-8 text-sm font-medium text-teal-900">
-    <a href="Actualites.html" class="hover:text-teal-600">Actualités <span class="ml-1">›</span></a>
-    <a href="FormationProf.html" class="hover:text-teal-600">Formation professionnelle <span class="ml-1">›</span></a>
-    <a href="FormationSup.html" class="hover:text-teal-600">Formation supérieure <span class="ml-1">›</span></a>
-    <a href="Carrieres.html" class="hover:text-teal-600">Carrières</a>
-    <a href="Entreprises.html" class="hover:text-teal-600">Entreprises <span class="ml-1">›</span></a>
-    <a href="ContactezNous.html" class="hover:text-teal-600">Contactez-nous <span class="ml-1">›</span></a>
-  </nav>
-</header>
+  <!-- Hero -->
+  <section class="relative bg-secondary text-light">
+    <img src="img/banner.jpg" alt="Bannière école" class="w-full h-[400px] object-cover opacity-60">
+    <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-4">
+      <h2 class="text-3xl md:text-5xl font-bold mb-4">Construisez votre avenir avec Easy Bridge</h2>
+      <p class="text-lg md:text-xl mb-6">Une éducation internationale, des opportunités mondiales</p>
+      <a href="FormationSup.html" class="bg-primary text-light px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600">
+        Découvrir nos programmes
+      </a>
+    </div>
+  </section>
 
+  <!-- Présentation -->
+  <section class="max-w-6xl mx-auto px-6 py-12 text-center">
+    <h3 class="text-2xl font-bold mb-4">Bienvenue à Easy Bridge International Academy</h3>
+    <p class="text-gray-700 max-w-3xl mx-auto">
+      Easy Bridge International Academy est une institution moderne qui offre des programmes de formation
+      professionnelle et supérieure adaptés aux besoins du marché mondial. Nos enseignants expérimentés et notre
+      approche pratique vous préparent à réussir dans un monde en constante évolution.
+    </p>
+  </section>
 
-    <main></main>
-    <footer></footer>
+  <!-- Programmes -->
+  <section class="bg-gray-100 py-12">
+    <div class="max-w-6xl mx-auto px-6">
+      <h3 class="text-2xl font-bold text-center mb-8">Nos Programmes</h3>
+      <div class="grid md:grid-cols-2 gap-8">
+        <div class="bg-light shadow rounded-xl overflow-hidden">
+          <img src="img/FormationPRof.jpg" alt="Formation professionnelle" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h4 class="text-xl font-bold mb-2">Formation professionnelle</h4>
+            <p class="text-gray-700 mb-4">Développez des compétences pratiques et entrez rapidement sur le marché du
+              travail grâce à nos formations spécialisées.</p>
+            <a href="FormationProf.html" class="text-primary font-semibold hover:underline">En savoir plus →</a>
+          </div>
+        </div>
+        <div class="bg-light shadow rounded-xl overflow-hidden">
+          <img src="img/FormationSup.jpg" alt="Formation supérieure" class="w-full h-48 object-cover">
+          <div class="p-6">
+            <h4 class="text-xl font-bold mb-2">Formation supérieure</h4>
+            <p class="text-gray-700 mb-4">Préparez-vous à une carrière internationale grâce à nos programmes
+              universitaires de haut niveau.</p>
+            <a href="FormationSup.html" class="text-primary font-semibold hover:underline">En savoir plus →</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Actualités -->
+  <section class="max-w-6xl mx-auto px-6 py-12">
+    <h3 class="text-2xl font-bold text-center mb-8">Actualités</h3>
+    <div class="grid md:grid-cols-3 gap-8">
+      <div class="bg-light shadow rounded-xl overflow-hidden">
+        <img src="img/news1.jpg" alt="Nouvelle 1" class="h-40 w-full object-cover">
+        <div class="p-4">
+          <h4 class="font-bold mb-2">Rentrée académique 2025</h4>
+          <p class="text-gray-700 text-sm">Découvrez les nouveautés et événements prévus pour la rentrée.</p>
+        </div>
+      </div>
+      <div class="bg-light shadow rounded-xl overflow-hidden">
+        <img src="img/news2.jpg" alt="Nouvelle 2" class="h-40 w-full object-cover">
+        <div class="p-4">
+          <h4 class="font-bold mb-2">Nouveau partenariat international</h4>
+          <p class="text-gray-700 text-sm">Easy Bridge signe un accord avec des universités européennes.</p>
+        </div>
+      </div>
+      <div class="bg-light shadow rounded-xl overflow-hidden">
+        <img src="img/news3.jpg" alt="Nouvelle 3" class="h-40 w-full object-cover">
+        <div class="p-4">
+          <h4 class="font-bold mb-2">Succès de nos diplômés</h4>
+          <p class="text-gray-700 text-sm">Plus de 90% de nos étudiants trouvent un emploi dans les 6 mois.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
+  <!-- Entreprises partenaires -->
+  <section class="bg-gray-100 py-12">
+    <div class="max-w-6xl mx-auto px-6 text-center">
+      <h3 class="text-2xl font-bold mb-8">Nos Partenaires</h3>
+      <div class="grid grid-cols-2 md:grid-cols-4 gap-6 items-center">
+        <img src="img/partner1.png" alt="Partenaire 1" class="h-16 mx-auto">
+        <img src="img/partner2.png" alt="Partenaire 2" class="h-16 mx-auto">
+        <img src="img/partner3.png" alt="Partenaire 3" class="h-16 mx-auto">
+        <img src="img/partner4.png" alt="Partenaire 4" class="h-16 mx-auto">
+      </div>
+    </div>
+  </section>
+
+  <!-- Call to Action -->
+  <section class="py-12 text-center">
+    <h3 class="text-2xl font-bold mb-4">Rejoignez Easy Bridge International Academy</h3>
+    <p class="text-gray-700 mb-6">Construisez votre avenir dès aujourd’hui avec nos programmes de formation adaptés.</p>
+    <a href="ContactezNous.html" class="bg-primary text-light px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600">
+      Contactez-nous
+    </a>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-secondary text-light py-6 text-center text-sm">
+    © 2025 Easy Bridge International Academy. Tous droits réservés.
+  </footer>
+
+  <!-- Script menu -->
+  <script>
+    const btn = document.getElementById("menu-btn");
+    const menu = document.getElementById("mobile-menu");
+    btn.addEventListener("click", () => {
+      menu.classList.toggle("hidden");
+    });
+  </script>
 </body>
 
 </html>
