l'intégration des programmes à enseigner

--- a/ContactezNous.html
+++ b/ContactezNous.html
@@ -49,23 +49,21 @@
 
       <!-- Menu desktop -->
       <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm">
-        <a href="Actualites.html" class="hover:text-primary">Actualités</a>
-        <a href="FormationProf.html" class="hover:text-primary">Formation professionnelle</a>
-        <a href="FormationSup.html" class="hover:text-primary">Formation supérieure</a>
-        <a href="Carrieres.html" class="hover:text-primary">Carrières</a>
-        <a href="Entreprises.html" class="hover:text-primary">Entreprises</a>
-        <a href="ContactezNous.html" class="text-primary font-semibold">Contactez-nous</a>
+        <a href="Actualites.html">Actualités</a>
+        <a href="Formation.html">Nos formations</a>
+        <a href="Carrieres.html">Carrières</a>
+        <a href="Entreprises.html">Entreprises</a>
+        <a href="ContactezNous.html" class="font-semibold text-primary">Contactez-nous</a>
       </nav>
     </div>
 
     <!-- Menu mobile -->
     <nav id="mobile-menu" class="hidden flex-col space-y-2 px-6 pb-4 md:hidden bg-light shadow">
-      <a href="Actualites.html" class="block py-2 border-b border-gray-200 hover:text-primary">Actualités</a>
-      <a href="FormationProf.html" class="block py-2 border-b border-gray-200 hover:text-primary">Formation professionnelle</a>
-      <a href="FormationSup.html" class="block py-2 border-b border-gray-200 hover:text-primary">Formation supérieure</a>
-      <a href="Carrieres.html" class="block py-2 border-b border-gray-200 hover:text-primary">Carrières</a>
-      <a href="Entreprises.html" class="block py-2 border-b border-gray-200 hover:text-primary">Entreprises</a>
-      <a href="ContactezNous.html" class="block py-2 font-semibold text-primary">Contactez-nous</a>
+       <a href="Actualites.html">Actualités</a>
+        <a href="Formation.html">Nos formations</a>
+        <a href="Carrieres.html">Carrières</a>
+        <a href="Entreprises.html">Entreprises</a>
+        <a href="ContactezNous.html" class="font-semibold text-primary">Contactez-nous</a>
     </nav>
   </header>
 
