--- a/Entreprises.html
+++ b/Entreprises.html
@@ -29,21 +29,19 @@
         <span class="block w-6 h-0.5 bg-secondary"></span>
       </button>
       <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm">
-        <a href="Actualites.html">Actualités</a>
-        <a href="FormationProf.html">Formation professionnelle</a>
-        <a href="FormationSup.html">Formation supérieure</a>
+  <a href="Actualites.html">Actualités</a>
+        <a href="Formation.html">Nos formations</a>
         <a href="Carrieres.html">Carrières</a>
-        <a href="Entreprises.html">Entreprises</a>
+        <a href="Entreprises.html" class="font-semibold text-primary">Entreprises</a>
         <a href="ContactezNous.html">Contactez-nous</a>
       </nav>
     </div>
     <nav id="mobile-menu" class="hidden flex-col space-y-2 px-6 pb-4 md:hidden bg-light shadow">
-      <a href="Actualites.html">Actualités</a>
-      <a href="FormationProf.html">Formation professionnelle</a>
-      <a href="FormationSup.html">Formation supérieure</a>
-      <a href="Carrieres.html">Carrières</a>
-      <a href="Entreprises.html">Entreprises</a>
-      <a href="ContactezNous.html">Contactez-nous</a>
+  <a href="Actualites.html">Actualités</a>
+        <a href="Formation.html">Nos formations</a>
+        <a href="Carrieres.html">Carrières</a>
+        <a href="Entreprises.html" class="font-semibold text-primary">Entreprises</a>
+        <a href="ContactezNous.html">Contactez-nous</a>
     </nav>
   </header>
 
