--- a/index.html
+++ b/index.html
@@ -43,21 +43,19 @@
         <span class="block w-6 h-0.5 bg-secondary"></span>
       </button>
       <nav class="hidden md:flex space-x-6 lg:space-x-8 font-medium text-sm">
-        <a href="Actualites.html">Actualités</a>
-        <a href="FormationProf.html">Formation professionnelle</a>
-        <a href="FormationSup.html">Formation supérieure</a>
+      <a href="Actualites.html">Actualités</a>
+        <a href="Formation.html">Nos formations</a>
         <a href="Carrieres.html">Carrières</a>
         <a href="Entreprises.html">Entreprises</a>
         <a href="ContactezNous.html">Contactez-nous</a>
       </nav>
     </div>
     <nav id="mobile-menu" class="hidden flex-col space-y-2 px-6 pb-4 md:hidden bg-light shadow">
-      <a href="Actualites.html">Actualités</a>
-      <a href="FormationProf.html">Formation professionnelle</a>
-      <a href="FormationSup.html">Formation supérieure</a>
-      <a href="Carrieres.html">Carrières</a>
-      <a href="Entreprises.html">Entreprises</a>
-      <a href="ContactezNous.html">Contactez-nous</a>
+   <a href="Actualites.html">Actualités</a>
+        <a href="Formation.html">Nos formations</a>
+        <a href="Carrieres.html">Carrières</a>
+        <a href="Entreprises.html">Entreprises</a>
+        <a href="ContactezNous.html">Contactez-nous</a>
     </nav>
   </header>
 
@@ -67,7 +65,7 @@
     <div class="absolute inset-0 flex flex-col items-center justify-center text-center px-4">
       <h2 class="text-3xl md:text-5xl font-bold mb-4">Construisez votre avenir avec Easy Bridge</h2>
       <p class="text-lg md:text-xl mb-6">Une éducation internationale, des opportunités mondiales</p>
-      <a href="FormationSup.html" class="bg-primary text-light px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600">
+      <a href="Formation.html" class="bg-primary text-light px-6 py-3 rounded-lg font-semibold hover:bg-yellow-600">
         Découvrir nos programmes
       </a>
     </div>
